# SlideGen_MCP

./: .gitignore  README.md  kuhn_presentation.html
documentation/: main.py  pyproject.toml  test_server.py
mcp-client-python/: pyproject.toml
mcp-client-python/api/: client_github_documentation.py  main.py  mcp_client.py  mcp_client_new.py  mcp_connection_debug.py
mcp-client-python/frontend/: main.py
pdf_analyzer/: main.py  pyproject.toml  setup_nltk.py
ppt_generator/: main.py  pyproject.toml
