[project]
name = "mcp-client-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.54.0",
    "fastapi>=0.115.12",
    "mcp[cli]>=1.9.4",
    "openai>=1.86.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]
